# baby_fugu

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
baby_fugu/: __init__.py  dataset.py  hidden_state.py  metrics.py  one_head.py  public_safety.py  route_envelope.py
docs/: architecture.md
docs/experiments/: pilot30-summary.md
fixtures/: ko_route_signal_tiny.eval-ready.jsonl
scripts/: check_public_safety.py  evaluate_one_head.py  train_one_head.py
tests/: test_dataset.py  test_one_head.py  test_public_safety.py  test_route_envelope.py
