[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "baby-fugu"
version = "0.1.0"
description = "A tiny one-head route-signal router for frozen small-model embeddings."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]
qwen = [
  "torch",
  "transformers",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["baby_fugu*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
